# agentic-resume-screener

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PROGRESS.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: project_brief.md  research_notes.md  risks_and_mitigations.md
evaluation/: results.md
notebooks/: 01_document_parsing.ipynb  02_structured_extraction.ipynb  03_pipeline_testing.ipynb
prompts/: analyze_prompt.txt  extract_prompt.txt  recommend_prompt.txt
src/agents/: graph.py  nodes.py
src/core/: llm.py
src/schemas/: models.py
src/utils/: document_parser.py  experience.py
tests/: test_experience.py
